--- a/Video_Website/index.html
+++ b/Video_Website/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>List.js Demo</title>
+  <title>Parent Testimonials for the IDEA Reauthorization</title>
   
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 
@@ -18,17 +18,28 @@
   <div id="container">
   <div class="example-page">
     <div>
-      <h1>List.js Demo</h1>
+      <h1>Parent Testimonials for the IDEA Reauthorization</h1>
     </div>
     
     <div id="main">
       <h2>Get it at <a href = "#">listjs.com</a></h2>
       <p class="note"><b>Note</b>: These examples are build using jQuery, but that is not required.</p>
+
+      <div id="users">
+
+  <input class="search" placeholder="Search" />
+  <button class="sort" data-sort="name">
+    Sort
+  </button>
+
+  <ul class="list"></ul>
+
+</div>
       
-      <div class="c1">
+     <!--  <div class="c1">
         <h2>Lovely things list</h2>
         <div id="lovely-things-list">
-          <input class="search" placeholder="Search lovely things" />
+          <input class="search" placeholder="Search by category" />
           <ul class="sort-by">
             <li class="sort btn" data-sort="name">Sort by name</li>
             <li class="sort btn" data-sort="category">Sort by category</li>
@@ -38,30 +49,10 @@
             <li class="btn" id="filter-games">Only show games</li>
             <li class="btn" id="filter-beverages">Only show beverages</li>
           </ul>
-          <ul class="list">
-            <li>
-              <img src="http://listjs.com/images/examples/monkeyisland.jpg" class="thumb" />
-              <h4><span class="name">Monkey Island 2: LeChuck's Revenge</span> <span class="category">Game</span></h4>
-            <p class="description">Monkey Island 2: LeChuck's Revenge is an adventure game developed and published by LucasArts in 1991. It was the second game of the Monkey Island series, following The Secret...</p>
-          </li>
-          <li>
-            <img src="http://listjs.com/images/examples/coffee.jpg" class="thumb" />
-            <h4><span class="name">Good Coffee</span> <span class="category">Beverage</span></h4>
-          <p class="description">Coffee is a brewed beverage with a dark, slightly acidic flavor prepared from the roasted seeds of the coffee plant, colloquially called coffee beans.</p>
-        </li>
-        <li>
-          <img src="http://listjs.com/images/examples/fullthrottle.jpg" class="thumb" />
-          <h4><span class="name">Full Throttle</span> <span class="category">Game</span></h4>
-        <p class="description">Full Throttle is a computer adventure game developed and published by LucasArts. It was designed by Tim Schafer, who would later go on to design the critically acclaimed titles Grim Fandango, Psychonauts and Brütal Legend.</p>
-      </li>
-      <li>
-        <img src="http://listjs.com/images/examples/brooklyn.jpg" class="thumb" />
-        <h4><span class="name">Brooklyn Lager</span> <span class="category">Beverage</span></h4>
-        <p class="description">Brooklyn Brewery was started in 1987 by former Associated Press correspondent Steve Hindy and former Chemical Bank lending officer Tom Potter.</p>
-      </li>
+          <ul class="videos">
     </ul>
-  </div>
-</div>
+  </div> -->
+<!-- </div> -->
 </div>
 
 </div> <!-- end of #container -->
