--- a/Video_Website/index.html
+++ b/Video_Website/index.html
@@ -1,71 +1,30 @@
 <!DOCTYPE html>
 <html lang="en" >
-
-<head>
-  <meta charset="UTF-8">
-  <title>Parent Testimonials for the IDEA Reauthorization</title>
-  
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-
-  
+   <head>
+      <meta charset="UTF-8">
+      <title>Parent Testimonials for the IDEA Reauthorization</title>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
       <link rel="stylesheet" href="css/style.css">
+   </head>
+   <body>
+      <img src="/Users/yatharthdhoot/Desktop/code/VideoWebsite/Video_Website/header.png">
 
-  
-</head>
+      <div id="container">
+          <div id="users">
+             <input class="search" placeholder="Search" />
+             <button class="sort" data-sort="name">
+             Sort
+             </button>
+             <br>
+             <br>
+             <br>
+             <br>
+             <ul class="list" id = "list">
 
-<body>
-
-  <div id="container">
-  <div class="example-page">
-    <div>
-      <h1>Parent Testimonials for the IDEA Reauthorization</h1>
-    </div>
-    
-    <div id="main">
-      <h2>Get it at <a href = "#">listjs.com</a></h2>
-      <p class="note"><b>Note</b>: These examples are build using jQuery, but that is not required.</p>
-
-      <div id="users">
-
-  <input class="search" placeholder="Search" />
-  <button class="sort" data-sort="name">
-    Sort
-  </button>
-
-  <ul class="list"></ul>
-
-</div>
-      
-     <!--  <div class="c1">
-        <h2>Lovely things list</h2>
-        <div id="lovely-things-list">
-          <input class="search" placeholder="Search by category" />
-          <ul class="sort-by">
-            <li class="sort btn" data-sort="name">Sort by name</li>
-            <li class="sort btn" data-sort="category">Sort by category</li>
-          </ul>
-          <ul class="filter">
-            <li class="btn" id="filter-none">Show all</li>
-            <li class="btn" id="filter-games">Only show games</li>
-            <li class="btn" id="filter-beverages">Only show beverages</li>
-          </ul>
-          <ul class="videos">
-    </ul>
-  </div> -->
-<!-- </div> -->
-</div>
-
-</div> <!-- end of #container -->
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/list.js/1.0.0/list.min.js'></script>
-
-  
-
-    <script  src="js/index.js"></script>
-
-
-
-
-</body>
-
+             </ul>
+          </div>
+      <!-- end of #container -->
+      <script src='https://cdnjs.cloudflare.com/ajax/libs/list.js/1.0.0/list.min.js'></script>
+      <script  src="js/index.js"></script>
+   </body>
 </html>
