Edited GUI and added bootstrap to make website look better. Also added Background image

--- a/Video_Website/index.html
+++ b/Video_Website/index.html
@@ -5,23 +5,30 @@
       <title>Parent Testimonials for the IDEA Reauthorization</title>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
       <link rel="stylesheet" href="css/style.css">
+      <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script>
    </head>
-   <body>
+   <body background="/Users/yatharthdhoot/Desktop/code/VideoWebsite/Video_Website/background.jpg">
       <img src="/Users/yatharthdhoot/Desktop/code/VideoWebsite/Video_Website/header.png">
-
       <div id="container">
           <div id="users">
-             <input class="search" placeholder="Search" />
-             <button class="sort" data-sort="name">
+                  <div class="text-center">
+                    <div id="heading">
+                    <h2> Search For Videos </h2>
+                  </div>
+             <center><input id ="search" class="search" placeholder="Search" /><center>
+             <button id="sort" class="sort" data-sort="name">
              Sort
              </button>
              <br>
              <br>
              <br>
              <br>
-             <ul class="list" id = "list">
+                     </div>
 
-             </ul>
+             <center><ul class="list" id = "list">
+             </ul></center>
           </div>
       <!-- end of #container -->
       <script src='https://cdnjs.cloudflare.com/ajax/libs/list.js/1.0.0/list.min.js'></script>
