Added a navigation bar and added the about page. Completed about page

--- a/Video_Website/home.html
+++ b/Video_Website/home.html
@@ -10,26 +10,38 @@
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script>
    </head>
    <body background="/Users/yatharthdhoot/Desktop/code/VideoWebsite/Video_Website/background.jpg">
-      <img src="/Users/yatharthdhoot/Desktop/code/VideoWebsite/Video_Website/header.png">
+      <div id="top">
+         <center>
+            <h1>Parent Testimonials for the IDEA Reauthorization</h1>
+         </center>
+      </div>
+      <div id="navbarcontainer">
+         <div id="navbarcenter" class="navbar">
+            <div class="navbar-inner">
+               <a class="brand" href="/Users/yatharthdhoot/Desktop/code/VideoWebsite/Video_Website/index.html"><font color="#ffffff">Home</a></font>
+               <a class="brand" href="/Users/yatharthdhoot/Desktop/code/VideoWebsite/Video_Website/about.html"><font color="#ffffff">About</a></font>
+            </div>
+         </div>
+      </div>
       <div id="container">
-          <div id="users">
-                  <div class="text-center">
-                    <div id="heading">
-                    <h2> Search For Videos </h2>
-                  </div>
-             <center><input id ="search" class="search" placeholder="Search" /><center>
-             <button id="sort" class="sort" data-sort="name">
-             Sort
-             </button>
-             <br>
-             <br>
-             <br>
-             <br>
-                     </div>
-
-             <center><ul class="list" id = "list">
-             </ul></center>
-          </div>
+      <div id="users">
+         <div class="text-center">
+            <div id="heading">
+               <h1><b> Search For Videos </b></h1>
+            </div>
+            <center>
+            <input id ="search" class="search" placeholder="Search" />
+            <center>
+            <button id="sort" class="sort" data-sort="name">
+            Sort by Name
+            </button>
+            <br>
+         </div>
+         <center>
+            <ul class="list" id = "list">
+            </ul>
+         </center>
+      </div>
       <!-- end of #container -->
       <script src='https://cdnjs.cloudflare.com/ajax/libs/list.js/1.0.0/list.min.js'></script>
       <script  src="js/index.js"></script>
