fixed title bar and navbar

--- a/Video_Website/about.html
+++ b/Video_Website/about.html
@@ -9,7 +9,7 @@
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script>
    </head>
-   <body background="/Users/yatharthdhoot/Desktop/code/VideoWebsite/Video_Website/background.jpg">
+   <body background="background.jpg">
       <div id="top">
          <center>
             <h1>Parent Testimonials for the IDEA Reauthorization</h1>
@@ -18,8 +18,8 @@
       <div id="navbarcontainer">
          <div id="navbarcenter" class="navbar">
             <div class="navbar-inner">
-               <a class="brand" href="/Users/yatharthdhoot/Desktop/code/VideoWebsite/Video_Website/home.html"><font color="#ffffff">Home</a></font>
-               <a class="brand" href="/Users/yatharthdhoot/Desktop/code/VideoWebsite/Video_Website/about.html"><font color="#ffffff">About</a></font>
+               <a class="brand" href="home.html"><font color="#ffffff">Home</a></font>
+               <a class="brand" href="about.html"><font color="#ffffff">About</a></font>
             </div>
          </div>
       </div>
