Worked with flexbox to change UI

--- a/Video_Website/home.html
+++ b/Video_Website/home.html
@@ -18,7 +18,7 @@
       <div id="navbarcontainer">
          <div id="navbarcenter" class="navbar">
             <div class="navbar-inner">
-               <a class="brand" href="home.html"><font color="#ffffff">padding-right: 30px; HOME</a></font>
+               <a id = "navbarspacing" class="brand" href="home.html"><font color="#ffffff">HOME</a></font>
                <a class="brand" href="about.html"><font color="#ffffff">ABOUT</a></font>
             </div>
          </div>
@@ -31,17 +31,25 @@
             </div>
             <center>
             <input id ="search" class="search" placeholder="Search" />
-            <center>
+            </center>
             <button id="sort" class="sort" data-sort="name">
             Sort by Name
             </button>
             <br>
          </div>
-         <center>
-            <ul class="list" id = "list">
-            </ul>
-         </center>
+</div>
       </div>
+
+
+      <div id = "container-fluid">
+      	<div class = "row">
+      		<ul class = "list" id = "list">
+      		</ul>
+      	</div>
+      </div>
+
+
+
       <!-- end of #container -->
       <script src='https://cdnjs.cloudflare.com/ajax/libs/list.js/1.0.0/list.min.js'></script>
       <script  src="js/index.js"></script>
