--- a/Video_Website/about.html
+++ b/Video_Website/about.html
@@ -10,16 +10,16 @@
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script>
    </head>
    <body background="background.jpg">
-      <div id="top">
-         <center>
-            <h1>Parent Testimonials for the IDEA Reauthorization</h1>
-         </center>
+         <div id="top">
+            <center>
+               <h1>Parent Testimonials for the IDEA Reauthorization</h1>
+            </center> 
       </div>
       <div id="navbarcontainer">
          <div id="navbarcenter" class="navbar">
             <div class="navbar-inner">
-               <a class="brand" href="home.html"><font color="#ffffff">Home</a></font>
-               <a class="brand" href="about.html"><font color="#ffffff">About</a></font>
+               <a id = "navbarspacing" class="brand" href="home.html"><font color="#ffffff">HOME</a></font>
+               <a class="brand" href="about.html"><font color="#ffffff">ABOUT</a></font>
             </div>
          </div>
       </div>
