Changed layout of webpage, and added more suitable homepage

--- a/Video_Website/all_testimonials.html
+++ b/Video_Website/all_testimonials.html
@@ -26,22 +26,26 @@
             </div>
         </div>
     </div>
-    <div id="aboutmsg">
-        <h1>About the Videos</h1>
-        <p>
-            Dr Burke: We traveled to four states (Illinois, Tennessee, Massachusetts, and New Hampshire) to videotape the testimonials of parents of children with disabilities. All parents participated in a six hour training about civic engagement in special education legislation. At the end of the training, participants learned how to speak to legislators using the “hook, line, and sinker” approach (Walsh & Kuriansky, 2009). We provided sample statements for speaking to legislators. With eachsample statement, the participants identified the:
-            <br>
-            <br> (a) the hook (i.e., introduction of the person providing thestatement)
-            <br> (b) line (i.e., presentation of a problem)
-            <br> (c) sinker (i.e.,suggestion for how to resolve theproblem).
-
-            <br>
-            <br> Then, the participants were given a worksheet to write their testimonies. The worksheet was primarily blank except for the followingheadings: hook, line, and sinker. Participants individually wrote their own testimonies. On indicating they were done writing, we videotaped their testimonies. All testimonies are less than 3 minutes long.
-        </p>
-    </div>
-    <!-- end of #container -->
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/list.js/1.0.0/list.min.js'></script>
-    <script src="js/list.js"></script>
+    <div id="container">
+        <div id="users">
+            <div class="text-center">
+                <div id="heading">
+                    <h1><b> Search For Videos </b></h1>
+                     <h5><center>Search By: Age group, Disability, Year, Location, Language, Theme</center></h5>
+                </div>
+                <center>
+                    <input id="search" class="search" placeholder="Search" />
+                </center>
+                <br>
+            </div>
+            <center>
+                <ul class="list" id="list">
+                </ul>
+            </center>
+        </div>
+        <!-- end of #container -->
+        <script src='https://cdnjs.cloudflare.com/ajax/libs/list.js/1.0.0/list.min.js'></script>
+        <script src="js/list.js"></script>
 </body>
 
 </html>
