--- a/Video_Website/home.html
+++ b/Video_Website/home.html
@@ -11,7 +11,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script>
 </head>
 
-<body background="background.jpg">
+<body background="background.jpeg">
     <div id="top">
         <center>
             <h1>Parent Testimonials for the IDEA Reauthorization</h1>
