--- a/Video_Website/about.html
+++ b/Video_Website/about.html
@@ -14,7 +14,7 @@
 <body background="background_about.jpg">
     <div id="top">
         <center>
-            <h1>Parent Testimonials for the IDEA Reauthorization</h1>
+            <h1><a href="home.html"><font color="#ffffff">Parent Testimonials for the IDEA Reauthorization</font></a></h1>
         </center>
     </div>
     <div id="navbarcontainer">
