Added documentation to make code easier to read

--- a/Video_Website/about.html
+++ b/Video_Website/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- This is the beginning of the page, that starts with the title for the page -->
 <head>
     <meta charset="UTF-8">
     <title>Parent Testimonials for the IDEA Reauthorization</title>
@@ -11,21 +12,26 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script>
 </head>
 
-<body background="background_about.jpg">
+<!-- Inserting the background image (different for each page) -->
+<body background="background.jpeg">
     <div id="top">
         <center>
+            <!-- The title of the page, serves as a link to the homepage as well -->
             <h1><a href="home.html"><font color="#ffffff">Parent Testimonials for the IDEA Reauthorization</font></a></h1>
         </center>
     </div>
+    <!-- Navbar that allows user to navigate between pages, becomes bold upon hover -->
     <div id="navbarcontainer">
         <div id="navbarcenter" class="navbar">
             <div class="navbar-inner">
                 <a id="navbarspacing" class="brand" href="home.html"><font color="#ffffff">HOME</a></font>
-                <a id="navbarspacing" class="brand" href="about.html"><font color="#ffffff">ABOUT</a></font>
-                <a class="brand" href="all_testimonials.html"><font color="#ffffff">ALL TESTIMONIALS</a></font>
+                <a id="navbarspacing" class="active-page" href="about.html"><font color="#ffffff">ABOUT</a></font>
+                <a class="brand" href="all_testimonials.html"><font color="#ffffff"> SEARCH ALL TESTIMONIALS</a></font>
             </div>
         </div>
     </div>
+
+    <!-- This inserts a box with the about message for the webpage -->
     <div id="aboutmsg">
         <h1>About the Videos</h1>
         <p>
@@ -41,7 +47,7 @@
     </div>
     <!-- end of #container -->
     <script src='https://cdnjs.cloudflare.com/ajax/libs/list.js/1.0.0/list.min.js'></script>
-    <script src="js/list.js"></script>
+    <!-- <script src="js/list.js"></script> -->
 </body>
 
 </html>
