--- a/Video_Website/home.html
+++ b/Video_Website/home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- This is the beginning of the page, that starts with the title for the page -->
 <head>
     <meta charset="UTF-8">
     <title>Parent Testimonials for the IDEA Reauthorization</title>
@@ -11,38 +12,46 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script>
 </head>
 
+<!-- Inserting the background image (different for each page) -->
 <body background="background.jpeg">
     <div id="top">
         <center>
+            <!-- The title of the page, serves as a link to the homepage as well -->
             <h1><a href="home.html"><font color="#ffffff">Parent Testimonials for the IDEA Reauthorization</font></a></h1>
         </center>
     </div>
+    <!-- Navbar that allows user to navigate between pages, becomes bold upon hover -->
     <div id="navbarcontainer">
         <div id="navbarcenter" class="navbar">
             <div class="navbar-inner">
-                <a id="navbarspacing" class="brand" href="home.html"><font color="#ffffff">HOME</a></font>
+                <a id="navbarspacing" class="active-page" href="home.html"><font color="#ffffff">HOME</a></font>
                 <a id="navbarspacing" class="brand" href="about.html"><font color="#ffffff">ABOUT</a></font>
-                <a class="brand" href="all_testimonials.html"><font color="#ffffff">ALL TESTIMONIALS</a></font>
+                <a class="brand" href="all_testimonials.html"><font color="#ffffff"> SEARCH ALL TESTIMONIALS</a></font>
             </div>
         </div>
     </div>
-    <div id="aboutmsgforhome">
 
+    <!--This inserts a box with all the text for welcome message -->
+    <div id="aboutmsgforhome">
         <center>
             <h1>Welcome</h1></center>
         <p>
             With funding from the Spencer Foundation, Drs. Rossetti (Boston University) and Burke (University of Illinois at Urbana-Champaign) conductedcivic engagement trainings with parents of individuals with disabilities in four states. Specifically, in collaboration with Parent Training and Information Centers, civic engagement trainings were conducted in: Illinois, Massachusetts, New Hampshire, and Tennessee. At the end of the civic engagement training, parents completed short (i.e., 3 minute) videotaped testimonials. The testimonials share their concerns and suggestions for changes in the Individuals with Disabilities Education Act (IDEA, the federal special education law).
         </p>
     </div>
+
+    <!-- beginning of the container -->
     <div id="container">
         <div id="users">
             <div class="text-center">
                 <div id="homeheading">
+                    <!--displaying the five featured videos on the home page for the users to get a glimpse of the rest of the videos -->
                     <h1><b> Featured Videos </b></h1>
                 </div>
                 <br>
             </div>
             <center>
+                <!-- homelist refers to the list of the featured videos to be displayed -->
                 <ul class="homelist" id="homelist">
                 </ul>
             </center>
