Added all necessary functionality. Video website is ready for use

--- a/Video_Website/home.html
+++ b/Video_Website/home.html
@@ -14,12 +14,19 @@
 
 <!-- Inserting the background image (different for each page) -->
 <body background="background.jpeg">
+    <div class = "flex-container">
+        <div>
+            <img src = "illinois_tag.jpg" height="100" width="100">
+        </div>
     <div id="top">
         <center>
+            <div>
             <!-- The title of the page, serves as a link to the homepage as well -->
             <h1><a href="home.html"><font color="#ffffff">Parent Testimonials for the IDEA Reauthorization</font></a></h1>
         </center>
     </div>
+    </div>
+
     <!-- Navbar that allows user to navigate between pages, becomes bold upon hover -->
     <div id="navbarcontainer">
         <div id="navbarcenter" class="navbar">
@@ -56,7 +63,46 @@
                 </ul>
             </center>
         </div>
+    </div>
+    
         <!-- end of #container -->
+
+        <!-- Footer -->
+    <section id="footer">
+        <div class="container">
+            <div class="row text-center text-xs-center text-sm-left text-md-left">
+                <div class="col-xs-12 col-sm-4 col-md-4">
+                    <h5>Credit</h5>
+                    <ul class="list-unstyled quick-links">
+                        <li><a href="https://www.linkedin.com/in/yatharth-dhoot-2baa6316b/"><i class="fa fa-angle-double-right"></i>Yatharth Dhoot</a></li>
+                        <li><a href="https://www.linkedin.com/in/smarak-pattnaik-637941178/"><i class="fa fa-angle-double-right"></i>Smarak Pattnaik</a></li>
+                    </ul>
+                </div>
+                <div class="col-xs-12 col-sm-4 col-md-4">
+                    <h5>Navigation</h5>
+                    <ul class="list-unstyled quick-links">
+                        <li><a href="home.html"><i class="fa fa-angle-double-right"></i>Home</a></li>
+                        <li><a href="about.html"><i class="fa fa-angle-double-right"></i>About</a></li>
+                        <li><a href="all_testimonials.html"><i class="fa fa-angle-double-right"></i>All Testimonials</a></li>
+                    </ul>
+                </div>
+                <div class="col-xs-12 col-sm-4 col-md-4">
+                    <h5>Contact</h5>
+                    <ul class="list-unstyled quick-links">
+                        <li><a href="https://education.illinois.edu/faculty/meghan-burke"><i class="fa fa-angle-double-right"></i>Meghan Burke</a></li>
+                        <li><a href="mailto:meghanbm@illinois.edu"><i class="fa fa-angle-double-right"></i>meghanbm@illinois.edu</a></li>
+                    </ul>
+                </div>
+            </div> 
+            <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center text-white">
+                    <p class="h6">&copy University of Illinois Board of Trustees</p>
+                </div>
+                </hr>
+            </div>  
+        </div>
+    </section>
+    <!-- ./Footer -->
         <script src='https://cdnjs.cloudflare.com/ajax/libs/list.js/1.0.0/list.min.js'></script>
         <script src="js/featured_list.js"></script>
 </body>
