changed bg pictures

--- a/Video_Website/about.html
+++ b/Video_Website/about.html
@@ -13,7 +13,7 @@
 </head>
 
 <!-- Inserting the background image (different for each page) -->
-<body background="background.jpeg">
+<body background="background_about.jpg">
     <div class = "flex-container">
         <div>
             <img src = "illinois_tag.jpg" height="100" width="100">
