fixed minor website errors

--- a/Video_Website/about.html
+++ b/Video_Website/about.html
@@ -39,16 +39,20 @@
 
     <!-- This inserts a box with the about message for the webpage -->
     <div id="aboutmsg">
-        <h1>About the Videos</h1>
+        <h1><b>About the Videos</b></h1>
         <p>
-            Dr Burke: We traveled to four states (Illinois, Tennessee, Massachusetts, and New Hampshire) to videotape the testimonials of parents of children with disabilities. All parents participated in a six hour training about civic engagement in special education legislation. At the end of the training, participants learned how to speak to legislators using the “hook, line, and sinker” approach (Walsh & Kuriansky, 2009). We provided sample statements for speaking to legislators. With eachsample statement, the participants identified the:
-            <br>
+
+        	With funding from the Spencer Foundation, Drs. Rossetti (Boston University) and Burke (University of Illinois at Urbana-Champaign) conducted civic engagement trainings with parents of individuals with disabilities in four states. Specifically, in collaboration with Parent Training and Information Centers, civic engagement trainings were conducted in: Illinois, Massachusetts, New Hampshire, and Tennessee. At the end of the civic engagement training, parents completed short (i.e., 3 minute) videotaped testimonials. The testimonials share their concerns and suggestions for changes in the Individuals with Disabilities Education Act (IDEA, the federal special education law). 
+        	<br>
+        	<br>
+            We traveled to four states (Illinois, Tennessee, Massachusetts, and New Hampshire) to videotape the testimonials of parents of children with disabilities. All parents participated in a six hour training about civic engagement in special education legislation. At the end of the training, participants learned how to speak to legislators using the “hook, line, and sinker” approach (Walsh & Kuriansky, 2009). We provided sample statements for speaking to legislators. With each sample statement, the participants identified the:
+          
             <br> (a) the hook (i.e., introduction of the person providing thestatement)
             <br> (b) line (i.e., presentation of a problem)
             <br> (c) sinker (i.e.,suggestion for how to resolve theproblem).
-
             <br>
-            <br> Then, the participants were given a worksheet to write their testimonies. The worksheet was primarily blank except for the followingheadings: hook, line, and sinker. Participants individually wrote their own testimonies. On indicating they were done writing, we videotaped their testimonies. All testimonies are less than 3 minutes long.
+
+            <br> Then, the participants were given a worksheet to write their testimonies. The worksheet was primarily blank except for the following headings: hook, line, and sinker. Participants individually wrote their own testimonies. On indicating they were done writing, we videotaped their testimonies. All testimonies are less than 3 minutes long.
         </p>
     </div>
     <!-- end of #container -->
