--- a/Video_Website/home.html
+++ b/Video_Website/home.html
@@ -41,10 +41,10 @@
     <!--This inserts a box with all the text for welcome message -->
     <div id="aboutmsgforhome">
         <center>
-            <h1>Welcome</h1></center>
-        <p>
-            With funding from the Spencer Foundation, Drs. Rossetti (Boston University) and Burke (University of Illinois at Urbana-Champaign) conductedcivic engagement trainings with parents of individuals with disabilities in four states. Specifically, in collaboration with Parent Training and Information Centers, civic engagement trainings were conducted in: Illinois, Massachusetts, New Hampshire, and Tennessee. At the end of the civic engagement training, parents completed short (i.e., 3 minute) videotaped testimonials. The testimonials share their concerns and suggestions for changes in the Individuals with Disabilities Education Act (IDEA, the federal special education law).
-        </p>
+            <h1><b>Welcome</b></h1></center>
+        <center><p>
+            In this website, you can find videotaped testimonials from parents of children with disabilities. Each parent provides suggestions for the next reauthorization of the Individuals with Disabilities Education Act (IDEA, the federal special education law). 
+        </p></center>
     </div>
 
     <!-- beginning of the container -->
