Added hover functionality

--- a/Video_Website/all_testimonials.html
+++ b/Video_Website/all_testimonials.html
@@ -37,6 +37,7 @@
             </div>
         </div>
     </div>
+
     <!-- beginning of container -->
     <div id="container">
         <div id="users">
@@ -44,10 +45,25 @@
                 <div id="heading">
                     <h1><b> Search For Videos </b></h1>
                     <!-- Search tags -->
-                     <h5><center>
-                        <span class = "popup" data-popuptext= "hello">
-                     Search By: </span> Age group, Disability, Year, Location, Language, Theme
-                 </center></h5>
+                        <div id="parent">
+                    <h5><center>
+                     Search By: Age group, Disability, Year, Location, Language, Theme
+                 </center></h5>                    
+                 <div id="popup" style="display: none"><div class = "box_for_search">
+                        <ul>
+                        <li><b>Age Groups: </b> Early Childhood (0-8), School Age (8-14), Transition (14-22), Adult Service(22+) </li>
+                        <br>
+                        <li><b>Locations: </b> Massachusetts, Chicago, Memphis, New Hampshire, UIUC, Dupage, ISU </li>
+                        <br>
+                        <li><b>Disabilities: </b> ASD, ADHD, ID, Down Syndrome, Dyslexia, HFASD, Social Anxiety, Multiple, Learning, Asperger's, Deaf, Brown Syndrome, Cerebral Palsy, Autism, Apraxia, Asthma, Congenital Heart Disease, Siezure Disorder, Blindness, TBI, Cardiac Disease, SLD, OCD, Allergies, MS, Auditory Processing Disorder, Language Disorder, ADD, Char Syndrome, Developmental Delay, Cognitive Disorder </li>
+                        <br>
+                        <li><b>Gender: </b> Boy, Girl </li>
+                        <br>
+                        <li><b>Language: </b> English, Spanish
+                        </ul>
+                     </div></div>
+                    </div>
+                     
                      <!-- <div class = "box_for_search">
                         <ul>
                         <li><b>Age Groups: </b> Early Childhood (0-8), School Age (8-14), Transition (14-22), Adult Service(22+) </li>
