Added new line for search categories

--- a/Video_Website/all_testimonials.html
+++ b/Video_Website/all_testimonials.html
@@ -47,7 +47,8 @@
                     <!-- Search tags -->
                         <div id="parent">
                     <h5><center>
-                     Search By: Age group, Disability, Year, Location, Language, Theme
+                     Search By: Age group, Disability, Year, Location, Language, Theme <br>
+                    <font size = "4">(Hover to see all searchable categories) </font>
                  </center></h5>                    
                  <div id="popup" style="display: none"><div class = "box_for_search">
                         <ul>
