Made changes to tags as per Prof. Burke's recommendation

--- a/Video_Website/all_testimonials.html
+++ b/Video_Website/all_testimonials.html
@@ -54,30 +54,16 @@
                         <ul>
                         <li><b>Age Groups: </b> Early Childhood (0-8), School Age (8-14), Transition (14-22), Adult Service(22+) </li>
                         <br>
-                        <li><b>Locations: </b> Massachusetts, Chicago, Memphis, New Hampshire, UIUC, Dupage, ISU </li>
+                        <li><b>Locations: </b> Massachusetts, Illinois, Tennessee, New Hampshire </li>
                         <br>
-                        <li><b>Disabilities: </b> ASD, ADHD, ID, Down Syndrome, Dyslexia, HFASD, Social Anxiety, Multiple, Learning, Asperger's, Deaf, Brown Syndrome, Cerebral Palsy, Autism, Apraxia, Asthma, Congenital Heart Disease, Siezure Disorder, Blindness, TBI, Cardiac Disease, SLD, OCD, Allergies, MS, Auditory Processing Disorder, Language Disorder, ADD, Char Syndrome, Developmental Delay, Cognitive Disorder </li>
+                        <li><b>Disabilities: </b> Autism, Attention Deficit Hyperactivity Disorder, Intellectual Disability, Down Syndrome, Dyslexia, Anxiety, Multiple, Learning, Asperger's, Deaf, Brown Syndrome, Cerebral Palsy, Apraxia, Asthma, Congenital Heart Disease, Siezure Disorder, Blindness, Trauatic Brain Injury, Cardiac Disease, Learning Disability, Obsessive Compulsive Disorder, Allergies, MS, Auditory Processing Disorder, Language Disorder, Attention Deficit Disorder, Char Syndrome, Developmental Delay, Cognitive Disorder </li>
                         <br>
-                        <li><b>Gender: </b> Boy, Girl </li>
+                        <li><b>Gender: </b> Male, Female </li>
                         <br>
                         <li><b>Language: </b> English, Spanish
                         </ul>
                      </div></div>
                     </div>
-                     
-                     <!-- <div class = "box_for_search">
-                        <ul>
-                        <li><b>Age Groups: </b> Early Childhood (0-8), School Age (8-14), Transition (14-22), Adult Service(22+) </li>
-                        <br>
-                        <li><b>Locations: </b> Massachusetts, Chicago, Memphis, New Hampshire, UIUC, Dupage, ISU </li>
-                        <br>
-                        <li><b>Disabilities: </b> ASD, ADHD, ID, Down Syndrome, Dyslexia, HFASD, Social Anxiety, Multiple, Learning, Asperger's, Deaf, Brown Syndrome, Cerebral Palsy, Autism, Apraxia, Asthma, Congenital Heart Disease, Siezure Disorder, Blindness, TBI, Cardiac Disease, SLD, OCD, Allergies, MS, Auditory Processing Disorder, Language Disorder, ADD, Char Syndrome, Developmental Delay, Cognitive Disorder </li>
-                        <br>
-                        <li><b>Gender: </b> Boy, Girl </li>
-                        <br>
-                        <li><b>Language: </b> English, Spanish
-                        </ul>
-                     </div> -->
                 </div>
                 <center>
                     <input id="search" class="search" placeholder="Search" />
